# Final_task

./: .gitignore  CMakeLists.txt  cli  includes.hpp
Client/: CMakeLists.txt  Client.cpp  Client.hpp  client
Client/headers/: Client.hpp
Client/src/: Client.cpp  main.cpp
Database/: CMakeLists.txt  Database.cpp  Database.hpp
Server/: CMakeLists.txt  Server.cpp  Server.hpp  conanfile.txt  server
Server/headers/: Database.hpp  Server.hpp
Server/src/: Database.cpp  Server.cpp  main.cpp
cmake-build/: CMakeCache.txt  Makefile  cmake_install.cmake
cmake-build/Client/: Client  Makefile
cmake-build/Database/: Makefile  cmake_install.cmake
cmake-build/Server/: Makefile  Server
includes/: includes.hpp
